@@ -15,14 +15,14 @@ $EM_CONF[$_EXTKEY] = array(
 	'description' => 'Module for editing the DAM categories.',
 	'category' => 'module',
 	'shy' => 0,
-	'version' => '1.1.0',
+	'version' => '1.2.1-dev',
 	'dependencies' => 'dam',
 	'conflicts' => '',
 	'priority' => '',
 	'loadOrder' => '',
 	'module' => 'mod1,mod_cmd,mod_clickmenu',
 	'doNotLoadInFE' => 1,
-	'state' => 'alpha',
+	'state' => 'stable',
 	'uploadfolder' => 0,
 	'createDirs' => '',
 	'modify_tables' => '',
@@ -37,7 +37,7 @@ $EM_CONF[$_EXTKEY] = array(
 		'depends' => array(
 			'dam' => '',
 			'php' => '4.0.0-',
-			'typo3' => '3.8.0-',
+			'typo3' => '4.5.0-',
 		),
 		'conflicts' => array(
 		),
